<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.cardview.CircularRevealCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_wallpaper_item"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:padding="@dimen/dp8"
            android:text="Hello"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".1"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/likeIv"
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/heart_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.circularreveal.cardview.CircularRevealCardView>